# Multimedia-Player-Development-Using-C-and-Qt-Framework

./: CMakeLists.txt  README.md
qml/Pages/: Home.qml
